cucumbo first screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <img src="img/logo.png" alt="logo">
+    <img src="img/2_Wordmark_Cucumbo.png" alt="logo">
     <div class="mainMenu">
       <ul class="menu">
         <li><a href="#">Productos</a>
@@ -20,9 +20,7 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Quiénes somos</a></li>
       </ul>
-      <p>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar</p>
-
+      <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar</h2>
     </div>
-
   </body>
 </html>
