sections "corporan & facial" added

--- a/index.html
+++ b/index.html
@@ -8,19 +8,68 @@
 
   </head>
   <body>
-    <img src="img/2_Wordmark_Cucumbo.png" alt="logo">
-    <div class="mainMenu">
-      <ul class="menu">
-        <li><a href="#">Productos</a>
-          <ul class="subMenu">
-            <li><a href="#">Corporal</a>
-            <li><a href="#">Facial</a>
+    <header>
+      <div class="">
+
+      </div>
+    </header>
+    <div class="">
+      <main>
+        <div class="logo">
+          <img src="img/logo.png" alt="logo">
+        </div>
+        <div class="mainMenu">
+          <ul class="menu">
+            <li><a href="#">Productos</a>
+              <ul class="subMenu">
+                <li><a href="#corporal">Corporal</a>
+                <li><a href="#facial">Facial</a>
+              </ul>
+            </li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Quiénes somos</a></li>
           </ul>
-        </li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Quiénes somos</a></li>
-      </ul>
-      <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar</h2>
+          <div class="slogan">
+            <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar</h2>
+          </div>
+        </div>
+        <div class="products">
+          <div class="corporal" id="corporal">
+            <h1>Corporal</h1>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h1><a href="#">Desodorante Natural</a></h1>
+            </article>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h2><a href="#">Desodorante Natural</a></h2>
+            </article>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h3><a href="#">Desodorante Natural</a></h3>
+            </article>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h4><a href="#">Desodorante Natural</a></h4>
+            </article>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h5><a href="#">Desodorante Natural</a></h5>
+            </article>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h1><a href="#">Desodorante Natural</a></h1>
+            </article>
+            <article class="">
+              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
+              <h1><a href="#">Desodorante Natural</a></h1>
+            </article>
+          </div>
+          <div class="facial" id="facial">
+            <h1>Facial</h1>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
