sections and css comments added

--- a/index.html
+++ b/index.html
@@ -3,73 +3,122 @@
   <head>
     <meta charset="utf-8">
     <link href="favicon.jpg" rel="icon" type="image/x-icon">
+    <link href="img/2_Simbolo_Cucumbo.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <title>Cucumbo</title>
-
   </head>
   <body>
     <header>
-      <div class="">
-
-      </div>
+      <section class="logo">
+        <img src="img/logo.png" alt="logo">
+      </section>
+      <nav class="menu backgroundPrimary">
+        <ul>
+          <li><a href="#">Productos</a>
+            <ul class="subMenu">
+              <li><a href="#corporal">Corporal</a>
+              <li><a href="#facial">Facial</a>
+            </ul>
+          </li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Quiénes somos</a></li>
+        </ul>
+      </nav>
     </header>
-    <div class="">
-      <main>
-        <div class="logo">
-          <img src="img/logo.png" alt="logo">
-        </div>
-        <div class="mainMenu">
-          <ul class="menu">
-            <li><a href="#">Productos</a>
-              <ul class="subMenu">
-                <li><a href="#corporal">Corporal</a>
-                <li><a href="#facial">Facial</a>
-              </ul>
-            </li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Quiénes somos</a></li>
+    <section class="slogan">
+      <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar.</h2>
+    </section>
+    <section class="products backgroundPrimary" id="corporal">
+      <h1>Corporal</h1>
+      <div class="productsGrid">
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h4>Desodorante Natural</h4>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h4>Desodorante Natural</h4>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h4>Desodorante Natural</h4>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h4>Desodorante Natural</h4>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h4>Desodorante Natural</h4>
+          </a>
+        </article>
+      </div>
+    </section>
+    <section class="products" id="facial">
+        <h1>Maquillaje</h1>
+      <div class="productsGrid">
+        <article class="">
+          <a href="#">
+            <img src="img/maquillaje/paletas.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+        <article class="">
+          <a href="#">
+            <img src="img/corporal/AURA01.jpg" alt="">
+            <h3>Desodorante Natural</h3>
+          </a>
+        </article>
+      </div>
+    </section>
+    <footer>
+      <nav>
+          <ul>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Términos de Uso</a></li>
+            <li><a href="#">Aviso de Privacidad</a></li>
           </ul>
-          <div class="slogan">
-            <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar</h2>
-          </div>
-        </div>
-        <div class="products">
-          <div class="corporal" id="corporal">
-            <h1>Corporal</h1>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h1><a href="#">Desodorante Natural</a></h1>
-            </article>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h2><a href="#">Desodorante Natural</a></h2>
-            </article>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h3><a href="#">Desodorante Natural</a></h3>
-            </article>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h4><a href="#">Desodorante Natural</a></h4>
-            </article>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h5><a href="#">Desodorante Natural</a></h5>
-            </article>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h1><a href="#">Desodorante Natural</a></h1>
-            </article>
-            <article class="">
-              <a href="#"><img src="img/corporal/AURA01.jpg" alt=""></a>
-              <h1><a href="#">Desodorante Natural</a></h1>
-            </article>
-          </div>
-          <div class="facial" id="facial">
-            <h1>Facial</h1>
-          </div>
-        </div>
-      </main>
-    </div>
+      </nav>
+    </footer>
+    <script type="js/events.js"></script>
   </body>
 </html>
