--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="favicon.jpg" rel="icon" type="image/x-icon">
     <link href="img/2_Simbolo_Cucumbo.png" rel="icon" type="image/x-icon">
+     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
     <link rel="stylesheet" href="css/styles.css">
     <title>Cucumbo</title>
   </head>
@@ -25,91 +26,93 @@
         </ul>
       </nav>
     </header>
-    <section class="slogan">
-      <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar.</h2>
-    </section>
-    <section class="products backgroundPrimary" id="corporal">
-      <h1>Corporal</h1>
-      <div class="productsGrid">
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h4>Desodorante Natural</h4>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h4>Desodorante Natural</h4>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h4>Desodorante Natural</h4>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h4>Desodorante Natural</h4>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h4>Desodorante Natural</h4>
-          </a>
-        </article>
-      </div>
-    </section>
-    <section class="products" id="facial">
-        <h1>Maquillaje</h1>
-      <div class="productsGrid">
-        <article class="">
-          <a href="#">
-            <img src="img/maquillaje/paletas.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-        <article class="">
-          <a href="#">
-            <img src="img/corporal/AURA01.jpg" alt="">
-            <h3>Desodorante Natural</h3>
-          </a>
-        </article>
-      </div>
-    </section>
+    <main>
+      <section class="slogan">
+        <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar.</h2>
+      </section>
+      <section class="products backgroundPrimary" id="corporal">
+        <h1>Corporal</h1>
+        <div class="productsGrid">
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+        </div>
+      </section>
+      <section class="products" id="facial">
+          <h1>Maquillaje</h1>
+        <div class="productsGrid">
+          <article class="">
+            <a href="#">
+              <img src="img/maquillaje/paletas.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+          <article class="">
+            <a href="#">
+              <img src="img/corporal/AURA01.jpg" alt="">
+              <h3>Desodorante Natural</h3>
+            </a>
+          </article>
+        </div>
+      </section>
+    </main>
     <footer>
       <nav>
           <ul>
