--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="favicon.jpg" rel="icon" type="image/x-icon">
     <link href="img/2_Simbolo_Cucumbo.png" rel="icon" type="image/x-icon">
-     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Cucumbo</title>
   </head>
@@ -77,37 +77,38 @@
           <article class="">
             <a href="#">
               <img src="img/maquillaje/paletas.jpg" alt="">
-              <h3>Desodorante Natural</h3>
+              <h3>Paletas de Countouring</h3>
+              <h3>Precio: $200</h3>
             </a>
           </article>
           <article class="">
             <a href="#">
               <img src="img/corporal/AURA01.jpg" alt="">
-              <h3>Desodorante Natural</h3>
+              <h3>Paletas de Countouring</h3>
             </a>
           </article>
           <article class="">
             <a href="#">
               <img src="img/corporal/AURA01.jpg" alt="">
-              <h3>Desodorante Natural</h3>
+              <h3>Paletas de Countouring</h3>
             </a>
           </article>
           <article class="">
             <a href="#">
               <img src="img/corporal/AURA01.jpg" alt="">
-              <h3>Desodorante Natural</h3>
+              <h3>Paletas de Countouring</h3>
             </a>
           </article>
           <article class="">
             <a href="#">
               <img src="img/corporal/AURA01.jpg" alt="">
-              <h3>Desodorante Natural</h3>
+              <h3>Paletas de Countouring</h3>
             </a>
           </article>
           <article class="">
             <a href="#">
               <img src="img/corporal/AURA01.jpg" alt="">
-              <h3>Desodorante Natural</h3>
+              <h3>Paletas de Countouring</h3>
             </a>
           </article>
         </div>
