name added in db.jason

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a href="#">
               <img src="img/random.jpg" alt="producto">
               <h3>nombre</h3>
+              <h3>something</h3>
             </a>
           </article>
         </div>
