--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
       <section class="products backgroundPrimary" id="corporal">
         <h1>Corporal</h1>
-        <div class="productsGrid" id="corporalProduct">
+        <div class="productsGrid" id="corporalProducts">
           <article class="">
             <a href="#">
               <img src="img/random.jpg" alt="producto">
@@ -44,12 +44,12 @@
       </section>
       <section class="products" id="facial">
           <h1>Maquillaje</h1>
-        <div class="productsGrid">
+        <div class="productsGrid" id="facialProducts">
           <article class="">
             <a href="#">
               <img src="img/maquillaje/paletas.jpg" alt="">
-              <h3>Paletas de Countouring</h3>
-              <h3>Precio: $200</h3>
+              <h3>nombre</h3>
+              <h3>precio</h3>
             </a>
           </article>
         </div>
@@ -63,6 +63,7 @@
             <li><a href="#">Aviso de Privacidad</a></li>
           </ul>
       </nav>
+      <a href="https://www.instagram.com/cucumbomx/?hl=es"><img src="img/instagramLogo.png" alt="instagram logo" class="instagramLogo"></a>
     </footer>
     <script src="js/fetch.js"></script>
   </body>
