--- a/index.html
+++ b/index.html
@@ -62,8 +62,15 @@
             <li><a href="#">Términos de Uso</a></li>
             <li><a href="#">Aviso de Privacidad</a></li>
           </ul>
+          <ul  class="socialNetworkLogo">
+            <li><a href="https://www.facebook.com/cucumbomx/" target="_blank"><img src="img/logos/fbIcon.png" alt="facebook logo"></a></li>
+            <li><a href="https://www.instagram.com/cucumbomx/?hl=es"><img src="img/logos/igIcon.png" alt="instagram logo"></a></li>
+          </ul>
       </nav>
-      <a href="https://www.instagram.com/cucumbomx/?hl=es"><img src="img/instagramLogo.png" alt="instagram logo" class="instagramLogo"></a>
+      <nav>
+
+      </nav>
+
     </footer>
     <script src="js/fetch.js"></script>
   </body>
