h1 and h3 size modified and colors modified

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="favicon.jpg" rel="icon" type="image/x-icon">
     <link href="img/2_Simbolo_Cucumbo.png" rel="icon" type="image/x-icon">
      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Italiana" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Cucumbo</title>
   </head>
@@ -28,7 +29,7 @@
     </header>
     <main>
       <section class="slogan">
-        <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar.</h2>
+        <h2>Creemos que la belleza masculina o femenina, además de una cuestión cosmética, es una cuestión de bienestar</h2>
       </section>
       <section class="products backgroundPrimary" id="corporal">
         <h1>Corporal</h1>
