FB and IG icons changed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="favicon.jpg" rel="icon" type="image/x-icon">
     <link href="img/2_Simbolo_Cucumbo.png" rel="icon" type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Italiana" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -64,8 +65,13 @@
             <li><a href="#">Aviso de Privacidad</a></li>
           </ul>
           <ul  class="socialNetworkLogo">
-            <li><a href="https://www.facebook.com/cucumbomx/" target="_blank"><img src="img/logos/fbIcon.png" alt="facebook logo"></a></li>
-            <li><a href="https://www.instagram.com/cucumbomx/?hl=es"><img src="img/logos/igIcon.png" alt="instagram logo"></a></li>
+            <li>
+              <a href="https://www.instagram.com/cucumbomx/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/cucumbomx/" target="_blank"><i class="fab fa-facebook-square"></i>
+              </a>
+            </li>
           </ul>
       </nav>
       <nav>
