--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
       <section class="products" id="facial">
           <h1>Maquillaje</h1>
-        <div class="productsGrid" id="facialProducts">
+        <div class="productsGrid" id="maquillajeProducts">
           <article class="">
             <a href="#">
               <img src="img/maquillaje/paletas.jpg" alt="">
