--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="favicon.jpg" rel="icon" type="image/x-icon">
     <link href="img/2_Simbolo_Cucumbo.png" rel="icon" type="image/x-icon">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Italiana" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -13,7 +13,7 @@
   <body>
     <header>
       <section class="logo">
-        <img src="img/logo.png" alt="logo">
+        <img src="img/logos/logo.png" alt="logo">
       </section>
         <nav class="menu backgroundPrimary">
           <ul>
